# EnerGNN

./: .gitignore  README.md  energnn.py  energnn_dep.py  main.ipynb  main.py  pixi.toml  pyproject.toml  readme.md
energnn/: datasets.py  models.py  utils.py
